test_src/compiler_errors/vars/UndefinedVarError2.b
class UndefinedVarError2 {
    void test() {
        for (var i = 0; i < 5; i++)
            println(i);
        println(i);
    }
}
